<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:cardElevation="30sp"
        app:cardCornerRadius="45dp"
        android:layout_marginBottom="-50dp"
        app:cardBackgroundColor="@color/nordDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/signInText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/nordFrost"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_marginBottom="64sp"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24sp"
                android:layout_marginBottom="24sp"
                android:paddingStart="24sp"
                android:paddingVertical="20dp"
                android:drawableStart="@drawable/baseline_person_outline_24"
                android:drawablePadding="20dp"
                android:hint="@string/username"
                android:background="@drawable/login_input"
                android:autofillHints="@string/username" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24sp"
                android:layout_marginBottom="32sp"
                android:paddingStart="24sp"
                android:paddingVertical="20dp"
                android:drawableStart="@drawable/baseline_info_24"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/login_input"
                android:autofillHints="@string/password" />

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_marginTop="48sp"
                android:layout_marginBottom="48sp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/nordFrost"
                android:text="@string/forgot_password"
                android:clickable="true" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64sp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:background="@drawable/rounded_corner"
                android:text="@string/login" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>