<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateAttendance"
    android:theme="@style/DropDownTheme">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:cardElevation="30sp"
        app:cardCornerRadius="45dp"
        android:layout_marginBottom="-50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/colorFadedYellow">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:layout_marginVertical="6sp"
                android:layout_marginHorizontal="25sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="0sp"
                tools:targetApi="p"
                android:backgroundTint="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center|start"
                    android:layout_gravity="center"
                    android:paddingHorizontal="12sp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/subjects"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:enabled="false"
                            android:hint="@string/subject"
                            android:textColor="@color/nordDark"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:layout_marginVertical="6sp"
                android:layout_marginHorizontal="25sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="0sp"
                tools:targetApi="p"
                android:backgroundTint="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center|start"
                    android:layout_gravity="center"
                    android:paddingHorizontal="12sp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/lectureTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:enabled="false"
                            android:textColor="@color/nordDark"
                            android:hint="@string/lecture_time"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:layout_marginVertical="6sp"
                android:layout_marginHorizontal="25sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="0sp"
                tools:targetApi="p"
                android:backgroundTint="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center|start"
                    android:layout_gravity="center"
                    android:paddingHorizontal="12sp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/lectureType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:enabled="false"
                            android:textColor="@color/nordDark"
                            android:hint="@string/lecture_type"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:layout_marginVertical="6sp"
                android:layout_marginHorizontal="25sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="0sp"
                tools:targetApi="p"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12sp"
                    android:gravity="center"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/yearSelector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:enabled="false"
                            android:textColor="@color/nordDark"
                            android:hint="@string/year"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="25sp"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/classSelector"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:enabled="false"
                            android:textColor="@color/nordDark"
                            android:hint="@string/classSelection"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:layout_marginVertical="6sp"
                android:layout_marginHorizontal="25sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="0sp"
                tools:targetApi="p"
                android:visibility="invisible"
                android:id="@+id/batchCard"
                android:backgroundTint="@android:color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center|start"
                    android:layout_gravity="center"
                    android:paddingHorizontal="12sp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/classBatch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:enabled="false"
                            android:textColor="@color/nordDark"
                            android:hint="@string/batch"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75sp"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="24sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="0sp"
                tools:targetApi="p">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center|start"
                    android:layout_gravity="center"
                    android:paddingHorizontal="24sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="25sp"
                        android:text="@string/code"
                        android:textSize="24sp"
                        android:textColor="@color/nordDark"/>

                        <TextView
                            android:id="@+id/lectureCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:enabled="true"
                            android:textStyle="bold"
                            android:textColor="@color/nordDark"
                            tools:ignore="LabelFor" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="24sp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/recordAttendance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="16sp"
                    android:paddingVertical="6sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_corner"
                    android:textColor="@color/nordDark"
                    android:text="@string/record_attendance"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    tools:targetApi="p" />

                <Space
                    android:layout_width="12sp"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/stopAttendance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingHorizontal="16sp"
                    android:paddingVertical="6sp"
                    android:layout_weight="0"
                    android:background="@drawable/rounded_corner"
                    android:textColor="@color/nordDark"
                    android:text="Stop Attendance"
                    android:outlineSpotShadowColor="@android:color/transparent"
                    tools:targetApi="p" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>