<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".TeacherScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:cardElevation="30sp"
        app:cardCornerRadius="45dp"
        android:layout_marginBottom="-50sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48sp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/greeting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:text="@string/good_greet"
                    android:textSize="30sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:layout_marginVertical="12sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="30sp"
                tools:targetApi="p"
                android:id="@+id/card_1"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/teacher_greet">

                    <androidx.cardview.widget.CardView
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        app:cardCornerRadius="25dp"
                        android:layout_marginEnd="25sp"
                        android:elevation="12dp">

                        <ImageView
                            android:layout_width="50sp"
                            android:layout_height="50sp"
                            android:src="@drawable/profile_pic"
                            android:scaleType="centerCrop" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="200sp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="25sp"
                        android:text="@string/teacher_card1_text"
                        android:id="@+id/teacherProfileCard"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:layout_marginVertical="12sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="30sp"
                tools:targetApi="p"
                android:id="@+id/markAttendance"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/teacher_greet">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginHorizontal="50sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/teacher_card2_text"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="24sp"
                app:cardCornerRadius="30sp"
                app:cardElevation="30sp"
                tools:targetApi="p"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/teacher_greet">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="100sp"
                        android:layout_marginHorizontal="50sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:text="@string/to_do_card_3"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="64sp"
                app:cardElevation="0sp"
                android:backgroundTint="@color/nordFrost"
                android:translationZ="90dp"
                android:layout_marginBottom="48sp"

                android:id="@+id/navigationBar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_info_24"/>

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_menu_book_24"/>

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_email_24"/>

                    <ImageView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_person_outline_24"
                        android:id="@+id/profileButton"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>